fixed h1 behaviour. h1 is center aligned. site_name block takes 95% of screen

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 /* DEBUG SECTION */
-header,
+/* header,
 main,
 footer {
     border: 1px solid red;
-}
+} */
 
 /* THIS SECTION CONSISTS CCS GRID LAYOUT FOR OUR PAGE*/
 html,
@@ -23,7 +23,14 @@ body {
 
 
 /* HEADER */
-#site_name h1 {
+#site_name {
+    margin: 0 auto;
+    width: 95%;
+    font-size: 2.25rem;
+    text-transform: uppercase;
+}
+
+#site_name h1{
     font-size: 2.25rem;
     text-transform: uppercase;
     text-align: center;
